infrastructure/main.tf
# 1 Define the AWS provider and region
provider "aws" {
  region = "eu-central-1"
}

# 2 Load the default VPC (needed for the security group)
data "aws_vpc" "default" {
  default = true
}

# 3 Define SSH key pair for EC2 access
resource "aws_key_pair" "grocerymate_key" {
  key_name = "grocerymate-key"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC6fYaERv8qcZOLyKKDJ0fFXj+mbqW9RfW28PmRm6KXLV5miVgpasf4iei1AVMg6aLG0UJg3KaaIj4qCJl5oZns8imnuyDhPOOlENpkqSxveL4gE6fXtpF/xuljH1+u5Cpue/coejkFdN5Z+1SH9cQI2FCHu3N7zPdc/hl7/lpSOTkQFBquVwV9nR8WLWJW9emohjqQSmxq0m5YWf7wjE16e1Q9obKQxklSjIPsP08AARFOBF+CS9SLN/rHpkD3z/piA7lrCFXtuzfL5WdbtKZ+oKPCowndLKvQ0BHVPdaIzS9l12YLekhXukRLaYi/a6QZaJvXTO21kc8O3/hl0YaqBfzoW4wGAYz6PYDhhd7oLDjiBAeknsmmNEoVZhfRiVZuTzWNDuzEVuk5zx70EAnHxKXI6UVqPdaMsX5fSATe6DEcz0iD7tbrOvLJWwCc [...]
}

# 4 Define a security group for EC2 that allows SSH access (port 22)
resource "aws_security_group" "grocerymate_sg" {
  name        = "grocerymate-sg"
  description = "Allow SSH inbound traffic"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["78.54.164.215/32"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "grocerymate-sg"
  }
}

# 5 Create an EC2 instance and attach the security group
resource "aws_instance" "grocerymate_ec2" {
  ami = "ami-02b7d5b1e55a7b5f1"
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.grocerymate_sg.id]
  key_name = aws_key_pair.grocerymate_key.key_name

  tags = {
    Name = "grocerymate-ec2"
  }
}
# Output the public IP of the EC2 instance
output "ec2_public_ip" {
  value = aws_instance.grocerymate_ec2.public_ip
}


# 6 Define a security group for RDS that only allows connections from EC2
resource "aws_security_group" "grocerymate_rds_sg" {
  name        = "grocerymate-rds-sg"
  description = "Allow PostgreSQL access from EC2"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "Access from EC2 to PostgreSQL"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    security_groups = [aws_security_group.grocerymate_sg.id]  # <-- erlaubt Zugriff nur von EC2-SG
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "grocerymate-rds-sg"
  }
}

# 7 Allocate a static Elastic IP
resource "aws_eip" "grocerymate_eip" {
  domain = "vpc"

  tags = {
    Name = "grocerymate-eip"
  }
}


# 8 Associate Elastic IP with EC2 instance
resource "aws_eip_association" "grocerymate_eip_assoc" {
  instance_id   = aws_instance.grocerymate_ec2.id
  allocation_id = aws_eip.grocerymate_eip.id
}
